# UQPCE

./: .buildinfo  .gitignore  LICENSE  README.md  bibliography.html  genindex.html  intro.html  multiphase_projectile_example.ipynb  objects.inv  pyproject.toml  release-notes.html  search.html  searchindex.js  setup.py
.github/: docs_workflow.yml
.github/workflows/: docs_workflow.yml
_sources/: bibliography.md  intro.md  release-notes.md
_sources/reference/: discrete-variables.md  pce.rst  reference.md  uqpce-group.rst
_sources/theory/: confidence-interval.md  derivatives.md  pce.md  sampling.md  symbols-and-defs.md  techniques.md
_sources/user-guide/: analysis.md  getting-started.ipynb  (+6 more)
docs/: _config.yml  _toc.yml  references.bib
env/: environment.yml  requirements.txt
examples/: test_CI_width.py  test_area.py  test_cost.py  test_objective.py  test_trajectories.py
reference/: continuous-variables.html  discrete-variables.html  pce.html  reference.html  uqpce-group.html
src/: README
test_suite/: check_verification_cases.py
tests/: check_verification_cases.py
theory/: confidence-interval.html  derivatives.html  openmdao.html  pce.html  sampling.html  symbols-and-defs.html  techniques.html  theory.html  uqpcegroup-overview.html  variables.html
uqpce/: __init__.py  __main__.py
user-guide/: analysis.html  getting-started.html  inputs.html  multiphase_projectile_example.html  outputs.html  running-uqpce.html  settings.html  variables.html
verification/: confidence-interval.html  limitations.html  pce.html  uq-with-openmdao.html  verification.html
(+154 files in other folders)
